<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dialysis</string>
    <string name="app_name_farC">دیالیز</string>
    <string name="info">اپلیکیشن جامع راهنمای دیالیز</string>
    <string name="recent_updates">تغییرات اخیر</string>
    <string name="invite_friends">پیشنهاد به دوستان</string>
    <string name="rating">نظردهی</string>
    <string name="about_us">درباره ما</string>
    <string name="contact_us">ارتباط با ما</string>
    <string name="kidney">کلیه</string>
    <string name="kidney_failure">نارسایی کلیه</string>
    <string name="kidney_function">عملکرد کلیه</string>
    <string name="hemodialysis">دیالیز و همودیالیز</string>
    <string name="kidney_failure_more">علائم نارسایی مزمن کلیه</string>
    <string name="vein">راه های دستیابی به عروق(رگ ها)</string>
    <string name="drug_store">داروخانه</string>
    <string name="lab_value">مقادیر آزمایشگاهی</string>
    <string name="sport_dialysis">ورزش در بیماران دیالیزی</string>
    <string name="nourish">تغذیه</string>
    <string name="vein_toolbar">راه های دستیابی به عروق</string>
    <string name="dialysis_machine">ماشین همودیالیز</string>
    <string name="filter">صافی</string>
    <string name="dialysis_lotion">محلول دیالیز</string>
    <string name="shaldon">مراقبت از شالدون</string>
    <string name="fistula">فیستول و انواع آن</string>
    <string name="fistula_learn">آموزش در مورد فیستول</string>
    <string name="grapht">گرافت</string>
    <string name="calcitrol">کلسی تریول</string>
    <string name="eritropotin">اریتروپوتین(اپرکس)</string>
    <string name="renazhel">رناژل(سولامر)</string>
    <string name="venufer">ونوفر</string>
    <string name="carbon_calcium">کربنات کلسیم</string>
    <string name="diet">رژیم غذایی</string>
    <string name="food_pyramid">هرم غذایی</string>
    <string name="calorie">کالری</string>
    <string name="thin">در صورتی که لاغر هستید؟</string>
    <string name="sweet">مواد قندی و نشاسته ای</string>
    <string name="fat">چربی ها</string>
    <string name="protein">پروتئین</string>
    <string name="potassium">پتاسیم</string>
    <string name="sodium">سدیم</string>
    <string name="potassium_what">پتاسیم چیست؟</string>
    <string name="low_potassium">کم پتاسیم</string>
    <string name="high_potassium">پر پتاسیم</string>
    <string name="phosphorus_material">مواد حاوی فسفر بالا</string>
    <string name="phosphorus">فسفر</string>
    <string name="phosphorus_what">فسفر چیست؟</string>
    <string name="high_phosphorus">مواد پرفسفر</string>
    <string name="water">آب و مایعات</string>
    <string name="water_control">کنترل مصرف مایعات و تشنگی</string>
    <string name="vitamin">ویتامین ها و مواد معدنی</string>
    <string name="diet_dialysis">رژیم غذایی بیماران دیابتی</string>
    <string name="kidney_text_one"> کلیه ها اندام هایی لوبیایی شکل و تقریبا به اندازه یک مشت بسته هستند که تمیز کردن خون و تنظیم نمک، قند و آب را بر عهده دارند و کار آن ها برای زندگی انسان حیاتی است. \nمحل قرار گرفتن کلیه ها در قسمت میانی کمر و چسبیده به دنده ها می باشد. در بدن انسان 2 کلیه وجود دارد. \nدر داخل هر کلیه صدها هزار واحد کوچک به نام نفرون وجود دارد که کار اصلی کلیه ها یعنی تولید ادرار را انجام می دهد.</string>
    <string name="kidney_text_two">تنظیم میزان  آب درون بدن \nتشکیل ادرار \nدفع مواد زائد مثل اوره،کراتنین و سموم \nتنظیم فشار خون \nخونسازی \nتقویت استخوان ها \nتنظیم میزان مواد معدنی مثل سدیم،پتاسیم،کلسیم و فسفر \nتولید ویتامین د</string>
    <string name="kidney_text_three">نارسایی کلیه حالتی است که عملکرد طبیعی کلیه ها متوقف می شود . دو نوع نارسایی کلیه وجود دارد: \n1- نارسایی حاد کلیه \n2- نارسایی مزمن کلیه \nنارسایی حاد کلیه: \nنارسایی حاد کلیه وقتی است که به طور ناگهانی عملکرد طبیعی کلیه ها متوقف می شود . اغلب علت آن مسمویت با سموم ، داروهای مضر ، کاهش شدید فشار خون ، ضربات و صدمات ، عفونت و یا انسداد در جریان ادراری می باشد . این حالت موقتی بوده و اغلب کلیه ها به عملکرد معمول یا نزدیک به آن بر می گردد . هر چند ممکن است در مواردی که درمان ناکافی یا نا مناسب به نارسایی مزمن کلیه تبدیل شود .  در این موارد شدید ممکن است دیالیز به طور موقت نیاز باشد و بعد از آن کلیه ها سلامت خود را بازیابند. \nنارسایی مزمن کلیه: \nشدیدترین شکل بیماری کلیوی ، نارسایی مزمن و پایدار کلیه ها می باشد در این حالت کلیه ها آنچنان صدمه دیده اند که قادر به انجام حیاتی خود نیستند و مبتلایان برای ادامه حیات یا باید تحت درمان با دیالیز قرار گیرند یا کلیه پیوندی دریافت کنند. \n علل ایجاد نارسایی مزمن کلیه: \nشایع ترین علل نارسایی کلیه ها ، دیابت و فشار خون بالا هستند . سایر علل عبارتند از : بیماری های ارثی مانند کلیه پلی کیستیک ، بیماری های مادر زادی کلیه ، بیماری های سیستم ایمنی مثل لوپوس، سنگ کلیه، تومورها و بزرگی پروستات در مردان، ابتلا به عفونت های مکرر ادراری و غیره</string>
    <string name="kidney_text_four">علائم نارسایی مزمن کلیه چیست ؟ \nمعمولا اولین علامت بیماری مزمن کلیه که شخص را به مطب پزشک می کشاند ضعف عمومی است . گرچه وقتی کلیه ها خوب کار نکنند می توانند علائم زیادی بروز کند ولی چند علامت مهم هشدار دهنده بیماری مزمن کلیه عبارتند از: \n-تغییر در دفعات ادرارو یا چگونگی ادرار کردن \n-احساس سوزش در هنگام ادرار \n-ادرار خون آلود یا قهوه ای رنگ \n-ورم اطراف چشم ها ، پاها ، دست ها و یا شکم \n-فشار خون بالا \nعلائم دیگر شامل: \nسرگیجه ، سردرد ، تهوع و استفراغ ، بی اشتهایی ، بی خوابی شبانه ، خارش بدن ، گرفتگی عضلانی در شب ، عدم تمرکز حواس و غیره  می باشد . ممکن است علی رغم همه این ها کسی کار معمول کلیه هایش را از دست بدهد هیچ یک از این علائم نیز وجود نداشته باشد ؛ بنابراین ، در بیشتر اوقات بررسی های آزمایشگاهی لازم است تا مشکل را آشکار سازد \nدرمان نارسایی کلیه چیست ؟ \nبسته به این که بیمار در کدام مرحله از نارسایی مزمن کلیه باشد از درمان ساده با تجویز یک سری از داروها و رعایت رژیم غذایی خاص ، تا دیالیز و پیوند کلیه استفاده می شود. \nروش های درمان نارسایی مزمن کلیه عبارتند از: \n-دیالیز \n-پیوند</string>
    <string name="dialysis_text_one">*دیالیز چیست؟ \nدیالیز یا پالایش خون نوعی درمان پزشکی است که به وسیله آن مواد زائد خون مستقیما از خون بیمارانی که نارسایی کلیه دارند گرفته شده و به بیرون از بدن هدایت می شود . دیالیز به دو صورت انجام می شود: \n-شایعترین روش درمانی(همودیالیز) \n-دیالیز صفاقی \n\n*همودیالیز چیست؟ \nنوعی دیالیز است که در آن مایعات اضافی و سموم ( مواد زائد ) بدن با استفاده از دستگاه کلیه مصنوعی ( ماشین دیالیز ) از جریان خون شما خارج می شود . برای فرستادن خون به درون کلیه مصنوعی ، پزشک نیاز به یک راه دسترسی ( ورودی ) به رگهای شما دارد . این امر با یک جراحی کوچک در ساعد دست یا گردن و یا ران شما امکان پذیر است. \nگاهی اوقات این راه با اتصال یک سرخرگ به سیاهرگ در ناحیه زیر پوست و تشکیل یک رگ خونی بزرگتر به نام فیستول عملی می شود . با این وجود در صورتی که رگهای شما برای فیستول کافی نباشد ، پزشک از یک لوله پلاستیکی برای اتصال یک سرخرگ و یک سیاهرگ زیر پوست استفاده می کند که گرافت نامیده می شود . خون سرخرگی از این طریق وارد صافی ماشین دیالیز می شود و تبادلاتی بین خون و محلول موجود در صافی دیالیز انجام می گیرد که باعث خروج آب و مواد زائد می شود . این عمل را آنقدر ادامه می دهند ( معمولا 3 تا 4 ساعت ) تا خون شما تصفیه و پاک شود. \nبیمارانی که مبتلا به نارسایی مزمن و پیشرفته کلیه هستند تا زمان انجام پیوند بایستی مرتبا دیالیز شوند ، دیالیز باعث بهبودی نارسایی کلیه نمی شود بلکه این روش برخی از اعمال کلیه را انجام می دهد . معمولا در هفته 2 تا 3 بار و هر بار به مدت 3 تا 4 ساعت به انجام همودیالیز نیاز است. \nبرای انجام یک همودیالیز به موارد زیر احتیاج است: \n1- ماشین همودیالیز(کلیه مصنوعی) \n2- عروق مناسب با جریان خون زیاد \n3- ست همراه صافی \n4- محلول دیالیز \n*می توانید توضیحات کافی در مورد هر یک از موارد بالا را در بخش دیالیز و با زدن دکمه بازگشت مطالعه کنید</string>
    <string name="dialysis_text_two">اجزاء ماشین \n\n*پمپ\n\nباعث حرکت خون ازبیمار به سمت دستگاه و صافی دیالیز،مجدا خون به بیمار برگردانده میشود.میزان جریان توسط پزشک و با توجه به شرایط بیمار تنظیم می شود. \n\n*سیستم ارائه محلول دیالیز \n\nباعث مخلوط کردن اب تصفیه شده با محلول دیالیز،واز طریق لوله ها به ماشین دیالیز پمپ می شود \n\n*آشکارساز هوا \n\nهدف از به دام انداختن هوا و آلارم، پیشگیری از ورود هوابه داخل خونی است که بیمار باز می گردد. \n\n*پمپ هپارین \n\nهپارین به عنوان ضد لخته به بدن بیمار تزریق می شود</string>
    <string name="dialysis_text_three">یک فیلتر انتخابی که باعث حذف مواد سمی و مواد ناخواسته موجود در خون می شود.عمل تصفیه در صافی به واسطه وجود غشا نیمه تراوایی است که در دو طرق آن خون بیمار و محلول دیالیز جریان دارندو در طول این غشا آب و مواد بین خون بیمار و محلول دیالیز در تبادل می باشد</string>
    <string name="dialysis_text_four">حاوی الکترولیت های نرمال موجود در پلاسمای خون می باشد،به میزانی که باعث ایجاد تغییرات شدید در حین دیالیز در الکترولیت های خون بیمار نشود.مایع دیالیز به صورت غلیظ در ظرفهای 4یا5 لیتری تهیه می گردد که با ۳۵ بار رقیق شدن غلظت مطلوب جهت دیالیز بدست می آید.محلول دیالیز به طور معمول حاوی سدیم،پتاسیم،کلسیم،فسفر،منیزیوم،دکستروز می باشد</string>
    <string name="vein_text_one">راه های دستیابی به عروق(رگ): \n1- موقت \n2- دائمی \n\nبرای انجام همودیالیز دسترسی به عروق بزرگی که بتواندجریان خونزیاد خارج از بدن را تامین کندلازم است این دسترسی توسط پزشک به روش های  مختلف برقرار می شود \nدسترسی موقت از طریق ورود کاتتر از راه پوست به یکی از وریدهای بزرگ صورت می گیرد.وریدهای که در آن کاتتر تعبیه می شود شامل وریدهای گردن ،کشاله ران، و تحت ترقوه(کتف) می باشند \nانواع کاتتر موقت: \n1- شالدون \n2- پرمیکت</string>
    <string name="vein_text_two">اکنون شما در مرحله ای از بیماری قرار دارید که همودیالیز درمان آن می باشد.جهت انجام دیالیز شما باید رگ پرخونی داشته باشید.برای دستیابی به این رگ لوله های پلاستیکی به نام شالدون در رگ گردن ،ران و کتف شما توسط جراح قرار می دهند.لذا برای پیشگیری از عوارض مثل عفونت و خونریزی رعایت نکات زیر لازم است \n\nچگونه از کاتتر(شالدون) مراقبت کنیم؟ \n1- درصورت محل ورود کاتتر قرمز،ترشح یا خونریزی یا متورم شد به پرستار یاپزشک اطلاع دهید \n2- خوداری از کشیدن کاتتر و ضربه به کاتتر \n3- درصورت جابجای کاتتر،به هیچ عنوان کاتتر را به جلو عقب حرکت ندهید و به پزشک مربوطه مراجعه نماید \n4- درصورت تنگی نفس اطلاع به پزشک \n5- درکلیه مراحل کار با کاتتر از ماسک استفاده کنید \n6- برای پانسمان کاتتر در خانه از سرم شستشو و الکل سفید استفاده کنیدقبلش حتما دست ها شسته شده باشد \n7- از پانسمان خشک استفاده کنید \n8- محل خروج کاتتر به هیچ عنوان در آب قرار نگیرد قبل رفتن به دیالیز حمام بروید \n9- بعداز هربار دیالیز پانسمان تعویض کنید \n10- به پیچ های سرلوله دست نزنید \n11- هیچگاه به گیره قطع جریان خون که به هردو شاخک لوله ها وصل است دست نزنید و آن را بازو بسته نکنید. \n12- مواظب باشیدهیچ گونه تزریقاتی از طریق لوله ها انجام نشود. \n13- مواظب تاشدگی یا خمیدگی لوله ها باشید.</string>
    <string name="info_app">اين اپليكيشن براي آموزش و ارتقاء سواد سلامت و تبعيت از درمان بيماران دياليزي طراحي شده است. با نصب اين اپليكيشن،بيماران و همراه بيماران  به آسانی و به صورت ٢٤ساعته در مورد كليه ها،عملكرد كليه،عوامل ازكار انداختن كليه،دياليز،داروهاي بيماران دياليزي وتغذيه اين بيماران دسترسي پيدا خواهند كرد.همچنين اين اپليكيشن از لحاظ زماني و مكاني زمينه يادگيري ،يادگيري كنندگان را در منزل،مسافرت،محل كار هموار مي نماييد.\nاین اپلیکیشن مورد تایید پزشکان متخصص و مجرب در این زمینه و همچنین اساتید دانشگاه علوم پزشکی می باشد. \nبه امید ارتقا سطح سواد سلامت و بهبودی روز افزون همه بیماران دیالیزی</string>
    <string name="contact_name">در صورت وجود هر گونه سوال و راهنمایی بیشتر در خصوص مراقبت های بیماران دیالیزی می توانید به دو روش ذیل با ما در ارتباط باشید:</string>
    <string name="telegram_id">Telegram ID: @osameh_ir</string>
    <string name="mail">ایمیل: osirandoust@gmail.com</string>
    <string name="update">نسخه 1.1.0 \n\nاین برنامه هنوز بروزرسانی نشده است!</string>
</resources>