<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/offer"
        android:checkableBehavior="none">

        <item
            android:id="@+id/inviteFriends"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/invite_friends"/>

        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/rating"/>

    </group>

    <group
        android:id="@+id/about"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_recentUpdates"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/recent_updates"/>

        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_us"/>

        <item
            android:id="@+id/nav_contactUS"
            android:icon="@drawable/ic_mail_black_24dp"
            android:title="@string/contact_us"/>

    </group>

</menu>