<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@android:color/darker_gray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/close_dialog_contact"
                android:contentDescription="@string/app_name_farC"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/ic_close_black_24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorText"
                    android:text="@string/contact_us"
                    android:fontFamily="@font/vazir_bold"
                    android:textSize="16sp"/>

                <ImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="104dp"
                    android:layout_height="104dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/logo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorText"
                    android:text="@string/contact_name"
                    android:fontFamily="@font/vazir"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/call"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_shape"
                    android:textColor="@color/colorAccentDark"
                    android:textStyle="bold"
                    android:text="@string/telegram_id"
                    android:textSize="16sp"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/mail"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/mail"
                    android:textSize="16sp"
                    android:fontFamily="@font/vazir_bold"
                    android:textAllCaps="false" />

            </LinearLayout>

        </RelativeLayout>

        </androidx.cardview.widget.CardView>

</RelativeLayout>