<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@android:color/secondary_text_dark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/close_dialog"
                android:contentDescription="@string/app_name_farC"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/ic_close_black_24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorText"
                    android:text="@string/recent_updates"
                    android:fontFamily="@font/vazir_bold"
                    android:textSize="16sp"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:contentDescription="@string/app_name"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_fileName="update.json"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorText"
                    android:text="@string/update"
                    android:fontFamily="@font/vazir"
                    android:textSize="12sp"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>