<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:layoutDirection="rtl">

    <LinearLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/veinAccess"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:cardElevation="3dp"
                android:layout_centerHorizontal="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/veinAccess_image"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:src="@drawable/veins"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/vein"
                        android:textSize="14sp"
                        android:fontFamily="@font/vazir"
                        android:textColor="@color/colorText"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/veinAccess_image"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/shaldon"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:cardElevation="3dp"
                android:layout_centerHorizontal="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/shaldon_image"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:src="@drawable/cutting"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/shaldon"
                        android:textSize="14sp"
                        android:fontFamily="@font/vazir"
                        android:textColor="@color/colorText"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/shaldon_image"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/fistula"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:cardElevation="3dp"
                android:layout_centerHorizontal="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/fistol_image"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:src="@drawable/veins_one"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/fistula"
                        android:textSize="14sp"
                        android:fontFamily="@font/vazir"
                        android:textColor="@color/colorText"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/fistol_image"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/fistulaLearn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:cardElevation="3dp"
                android:layout_centerHorizontal="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/fistulaLearn_image"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:src="@drawable/nerves"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/fistula_learn"
                        android:textSize="14sp"
                        android:fontFamily="@font/vazir"
                        android:textColor="@color/colorText"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/fistulaLearn_image"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/grapht"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:cardElevation="3dp"
                android:layout_centerHorizontal="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/grapht_image"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:src="@drawable/agiography"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/grapht"
                        android:textSize="14sp"
                        android:fontFamily="@font/vazir"
                        android:textColor="@color/colorText"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/grapht_image"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>